--- a/templates/user/user.html
+++ b/templates/user/user.html
@@ -5,7 +5,7 @@
     <main class="container user-main">
         <section>
             {% include 'includes/_flash_messages.html' %} 
-            <h1 class="text-center"> Mon Profil</h1> 
+            <h1 class="text-center mt-5"> Mon Profil</h1> 
         </section> 
     <div class="row mt-3 container justify-content-center">
         <section class="col-5">
