--- a/templates/admin/card_update.html
+++ b/templates/admin/card_update.html
@@ -1,46 +1,42 @@
 {% include 'header.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-<h1> Mise à jour de la carte : {{ card[0].name }} </h1>
-
-<div class="container">
-    <form action="{{url_for('update_page', id=card[0].id) }}" method="post" enctype="multipart/form-data" autocomplete="off">
-       <!-- {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "dark"}) }} -->   
+<h1 class="text-center mt-3"> Mise à jour de la carte : {{ card[0].name }} </h1>
+<div class="container mt-5">
+    <form action="{{url_for('update_page', id=card[0].id) }}" method="post" enctype="multipart/form-data" autocomplete="off">  
         {{ form.csrf_token }}
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.name) }}
         </div>
-        <div>
-            <div class="autocomplete w-100">
-                {{ wtf.form_field(form.edition) }}
-            </div>
+        <div class="d-flex row justify-content-center autocomplete">
+            {{ wtf.form_field(form.edition) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.creation_date) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.legality) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.rarity) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.price) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.search) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.file) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.type) }}
         </div>
-        <div>
+        <div class="row justify-content-center">
             {{ wtf.form_field(form.ccm) }}
         </div>
-        <div>
-            {{ wtf.form_field(form.submit) }}
+        <div class="text-center w-50 m-auto mt-3">
+            {{ wtf.form_field(form.submit, horizontal_columns=('lg', 2, 10)) }}
         </div>
     </section>
     </form>
