--- a/templates/cards/card.html
+++ b/templates/cards/card.html
@@ -2,13 +2,12 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 <body>
-  <section class="container">
+  <section class="container mt-3">
       {% if card.name != 'empty name' : %}
       <article class="row justify-content-center">
-        <h1 id="card-name-title" value="{{card.id}}">{{ card.name }}</h1>
-        <h2><em><small></small></em></h2>
+        <h1 class="text-center" id="card-name-title" value="{{card.id}}">{{ card.name }}</h1>
         <div class="border col-4">
-          <div class="image-card w-75 m-auto"><img class="w-100" src="{{media[1].path}}" alt="1{{media[1].alt}}" title={{media[1].title}}/></div>
+          <div class="image-card m-auto"><img class="w-100" src="{{media[1].path}}" alt="1{{media[1].alt}}" title={{media[1].title}}/></div>
         </div>
         <ul class="border col-4 ">
             <li class="m-2 row justify-content-start align-items-center">
@@ -96,11 +95,13 @@
       <h1>Cette carte n'est pas dans notre data base, contactez l'admin</h1>
       {% endif %}
     </article>  
+    <hr>
   </section>
-  <section class="container">
+  
+  <section class="container mt-3">
     <article class="row align-items-center jumbotron">
       <div>
-        <h1>Règles</h1>
+        <h2 class="text-center">Règles</h2>
         {% if info != [] : %}
           <ul>
             {% if info | length() > 1 :%}
@@ -137,6 +138,8 @@
   </section>
 
     <section class="container">
+      <hr>
+      <h2 class="text-center"> Les posts </h2>
     {% if comments != [] : %}
     <article>
       <ul> 
@@ -144,16 +147,16 @@
         {% for comment in comments: %}
             {% if comment[0].id == comment[0].post_id %}   
                 <li>
-                <h2>{{ comment[0].title|safe }} </h2>
+                <h3 class="m-3">{{ comment[0].title|safe }} </h3>
                 <p> POSTE {{ comment[0].content|safe }} </p>
-                <div class="flex">
+                <div class="d-flex align-items-baseline justify-content-center">
                     <div class="avatar-comment">
                         <img class="resp" src="{{ comment[2].path }}" alt="{{ comment[2].alt }}" title="{{ comment[2].title }}">
                     </div>
                     <p><small><strong> {{ comment[1].username }} </strong> - <em>{{ (comment[0].date | string())[:-7] }}</em></small></p>
-                </div>   
+                   
                 {% if current_user.id_status == 1: %}
-                <ul>
+                <ul class="m-3">
                     <li class="inline"><a title="Répondre" type="button" class="" data-bs-toggle="collapse" href="#collapseForm-{{ comment[0].id }}" 
                       role="button" aria-expanded="false" aria-controls="collapseForm">Répondre</a></li>
                     {% if current_user.id == comment[0].id_user : %}   
@@ -187,83 +190,52 @@
                                         
                     {% endif %}
                   </ul>
+                  </div>
                     <div class="collapse" id="collapseForm-{{ comment[0].id }}">
                       <form action="{{url_for('add_response', card_id=card.id, comment_id=comment[0].id, author_id=current_user.id)}}" method="post" name="form-reply">
                         {{ wtf.quick_form(response_form, novalidate=True, button_map={"submit": "dark"}) }}
                       </form>
                     </div>
                 {% else : %}
-                {% if username != "no_user" and (current_user.id_status != 1) %}
+                {% if username and (current_user.id_status != 1) %}
                     <p> Votre status est <strong>{{ current_user.status|safe }}</strong>, vous ne pouvez ni poster ni commenter. </p>
-                {% elif username == "no_user": %}
-                    <a href="{{ url_for('login_page')}}"> Connectez-vous pour répondre </a>
+                {% elif not username  : %}
+                    <a class="m-3" href="{{ url_for('login_page')}}"><p>Connectez-vous pour répondre.</p></a>
                 {% endif %}
             {% endif %}  
-                         
+            </div>      
             <!-- ###################################### SOUS COMMENTAIRE ############################ -->
-                <ul>                                                
+                <ul class="mt-3 ms-5">                                                
                   {% for reply in comments: %}
                       {% if reply[0].post_id != reply[0].id and reply[0].post_id == comment[0].id %}
-                        <li>
-                            <p> SOUS POSTE {{ reply[0].content }} </p>
-                            <div class='flex'><div class="avatar-comment"><img class="resp" src="{{ reply[2].path }}" alt="{{ reply[2].alt }}" title="{{ reply[2].title }}"></div><span><small><strong>
-                                {{ reply[1].username }}</strong> - <em>{{ (reply[0].date | string())[:-7] }}</em></small> </span></div> 
-                            {% if username != "no_user" and (current_user.id_status != 1) %}
-                              <p> Votre status est <strong>{{ current_user.status|safe }}</strong>, vous ne pouvez ni poster ni commenter. </p>
-                            {% elif username == "no_user": %}
-                              <a href="{{ url_for('login_page')}}"> Connectez-vous pour répondre </a>
+                        <li class="m-5 w-lg-50 w-m-100">
+                            <p> {{ reply[0].content }} </p>
+                            <div class='d-flex align-items-baseline justify-content-center'><div class="avatar-comment"><img class="resp" src="{{ reply[2].path }}" alt="{{ reply[2].alt }}" title="{{ reply[2].title }}"></div><span><small><strong>
+                                {{ reply[1].username }}</strong> - <em>{{ (reply[0].date | string())[:-7] }}</em></small> </span> 
+                            {% if current_user.id and (current_user.id_status != 1) %}
+                              <p>  {{username}} Votre status est <strong>{{ current_user.status|safe }}</strong>, vous ne pouvez ni poster ni commenter. </p>
+                            {% elif not username : %}
+                              <a class="m-3" href="{{ url_for('login_page')}}"> Connectez-vous pour répondre </a>
                             {% elif current_user.id_status == 1: %}
                                 <ul>
                                   <li class="inline"><a title="Répondre" type="button" class=""  data-bs-toggle="collapse" href="#collapseFormReply-{{ reply[0].id }}" 
                                     role="button" aria-expanded="false" aria-controls="collapseFormReply">Répondre</a></li>
                                     <span class="dot"> . </span> 
-                                  <!--
-                                  {% if current_user.id == reply[0].id_user : %}   
-                                       
-
-                                      <li class="inline"><a title="Modifier" type="button" class="" data-bs-toggle="modal" data-bs-target="#reply_modal" 
-                                        card_reply_id="{{card.id}}" post_reply_id="{{reply[0].id}}" post_reply_title="{{reply[0].title}}"
-                                        post_reply_body="{{reply[0].content}}" reply_method="1">
-                                        Modifier</a><span class="dot"> . </span></li>
-
-                                           <!-- ******************** MODAL RESPONSE ******************
-                                          {% with reply_id = reply[0].id %}
-                                          <div class="modal fade" id="reply_modal" tabindex="-1" aria-labelledby="replyLabel" aria-hidden="true">
-                                           <div class="modal-dialog">
-                                             <div class="modal-content">
-                                               <div class="modal-header">
-                                                  <h5 class="modal-title" id="replyLabel">Modifier votre réponse</h5>
-                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                               </div>
-                                               <div class="modal-body">
-                                                 <form action="{{ url_for('update_response', comment_id=reply_id, card_id=reply[0].id_card, author_id=current_user.id) }}" method="post">
-                                                  {{ wtf.quick_form(response_modify_form, novalidate=True, button_map={"submit": "dark"}) }}
-                                                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
-                                                 </form>
-                                               </div>        
-                                               </div>
-                                             </div>
-                                           </div>
-                                          </div>
-                                          {% endwith%} -->
-                                      
-                                      <li class="inline"><a title="Supprimer" onclick="return confirm('Voulez-vous supprimer la réponse suivante ?')"
+                                    <div class="collapse" id="collapseFormReply-{{ reply[0].id }}">
+                                      <form action="{{url_for('add_response', card_id=card.id, comment_id=comment[0].id, author_id=current_user.id)}}" method="post" name="form-reply">
+                                        {{ wtf.quick_form(response_form, novalidate=True, button_map={"submit": "dark"}) }}
+                                      </form>
+                                    </div>
+                                  <li class="inline"><a title="Supprimer" onclick="return confirm('Voulez-vous supprimer la réponse suivante ?')"
                                           href="{{ url_for('delete_comment', comment_id=reply[0].id, author=current_user.username, card_id=card.id ) }}">
                                           Supprimer</a></li>
-                                  {% endif %} 
                                 </ul>
-                                <div class="collapse" id="collapseFormReply-{{ reply[0].id }}">
-                                  <form action="{{url_for('add_response', card_id=card.id, comment_id=comment[0].id, author_id=current_user.id)}}" method="post" name="form-reply">
-                                    {{ wtf.quick_form(response_form, novalidate=True, button_map={"submit": "dark"}) }}
-                                  </form>
-                                </div>
-
+                            {% endif %} 
                           {% endif %}
-                        {% endif %}
                     </li>                          
                   {% endfor %}
                 </ul>
-                <hr>
+            
             </li>
           {% endif %}
         {% endfor %}        
@@ -271,14 +243,30 @@
   
     </ul>
     </article>
-    </section>
+  </section>
 
   {% endif %}
-  <section class="container jumbotron">
-    <h1>Rédiger un post</h1>
-    <form method="post" action="{{ url_for('add_comment', card_id=card.id, author=current_user.username) }}">
-      {{ wtf.quick_form(post_form, novalidate=True, button_map={"submit": "dark"}) }}
-    </form>
+  <section class="container">
+    <h2 class="text-center">Rédiger un post</h2>
+    {% if username : %}
+    <form action="{{ url_for('add_comment', card_id=card.id, author=current_user.username)}}" method='post' enctype="multipart/form-data" autocomplete="off">      
+      {{ post_form.csrf_token }}
+
+      <div class="d-flex justify-content-center">
+          {{ wtf.form_field(post_form.title) }}
+      </div>
+
+      <div class="d-flex justify-content-center">
+          {{ wtf.form_field(post_form.content) }}
+      </div>
+
+      <div class="text-center w-50 m-auto mt-3">
+        {{ wtf.form_field(post_form.submit, horizontal_columns=('lg', 2, 10)) }}
+      </div>
+      </form>
+    {% else %}
+    <a href="{{url_for('login_page')}}">Connectez-vous pour pouvoir poster.</a>
+    {% endif %}
   </section>
 
 
