--- a/templates/user/deckbuilder/_create_list.html
+++ b/templates/user/deckbuilder/_create_list.html
@@ -12,7 +12,7 @@
                     <h2 class='text-center'>Créer un deckbuilder</h2>
                 {% endif %}
 
-                <form class="row align-items-end w-80 justify-content-center form-wtf" role="form" method="post" novalidate="True" action="{{ url_for('create_deckbuilder_list', id_type=id_deckbuilder) }}">
+                <form class="row align-items-end w-80 justify-content-center form-wtf" role="form" method="post" novalidate action="{{ url_for('create_deckbuilder_list', id_type=id_deckbuilder) }}">
                     <input type="text" name="id_deckbuilder" hidden value="{{id_deckbuilder}}">
                     {{ wtf.quick_form(create_list_form, novalidate=True, button_map={"submit": "dark"}) }}
                 </form>
