--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
   {% block footer %}
   <footer>
-        <nav class="container footer"> 
-          <ul class="d-flex align-items-center justify-content-around">
+        <nav class="footer"> 
+          <ul class="d-flex p-0 align-items-center justify-content-around">
             <li><a href="#Top">Retour en Haut</a></li>          
             <li class="copyright text-muted">Copyright &copy; Aurelien P 2021</li>
         </ul>
