--- a/templates/admin/_card_page.html
+++ b/templates/admin/_card_page.html
@@ -1,6 +1,7 @@
 
 {% block content %}
-<table>
+<div class="table-responsive">
+<table class="">
     <thead>
         <tr>
             <th scope="col">Id</th>
@@ -58,5 +59,5 @@
     {% endfor %}
     </tbody>
 </table>
-
+</div>
 {% endblock %}
